# Drone-cartographer

./: .gitlab-ci.yml  .gitmodules  README.md  docker-compose.yml  start.sh
.gitlab/bug_templates/: basic_bug.md
.gitlab/issue_templates/: tache_de_base.md
.gitlab/merge_request_templates/: Default.md  basic_mr.md
.gitlab/task_templates/: basic_task.md
backend/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  app.py  constants.py  docker-compose.yml  requirements.txt  server.py  socketTests.py  socketTests2.py
backend/.devcontainer/: Dockerfile  devcontainer.json
backend/services/communication/: abstract_comm.py  bash_executor.py  byte_decoder.py  comm_crazyflie.py  comm_simulation.py  comm_tasks.py  crazyflie_sensing.argos  docker_exec.sh  file_helper.py  file_reader.py  simulation_configuration.py  template.argos
backend/services/data/: drone_data.py  map.py  phys_drone_data.py  simulation_wrappers.py  starting_drone_data.py
backend/services/map/: map.py
backend/services/status/: access_status.py  mission_status.py
backend/tests/: test_abstract_comm.py  test_access_status.py  test_bash_executor.py  test_byte_decoder.py  test_comm_crazyflie.py  test_comm_simulation.py  test_comm_tasks.py  test_drone.py  test_drone_data.py  test_file_helper.py  test_map.py  test_mission_status.py  test_mongo_interface.py  test_server.py  test_simulation_configuration.py  test_starting_drone_data.py
database/: .gitignore  docker-compose.yml
embedded/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  ServerStub.py  a.out  docker-compose.yml  run-clang-tidy.py
embedded/.devcontainer/: Dockerfile  devcontainer.json
embedded/embedded-firmware/: .gitignore  Makefile  cf2.dfu  cf2.hex  cf2.map  compile_commands.json  version.c
embedded/embedded-firmware/lint-pipeline/: compile_commands.json
embedded/embedded-firmware/lint-workspace/: compile_commands.json
embedded/embedded-firmware/src/: app_main.cc  app_main.h  colorGradient.cc  color_gradient.cc  commands_handler.cc  communication_manager.cc  firmware_controller.cc  firmware_sensor.cc  firmware_sensors.cc  navigationSystem.cc  navigation_system.cc  p2p_task.cc  sensor_manager.cc  time.cc  timer.cc  utils.cc
embedded/embedded-firmware/src/include/: ccommunication_manager.h  commandsHandler.h  commands_handler.h  communication_manager.h  sensor_manager.h
embedded/embedded-firmware/validate/: .gitignore  CMakeLists.txt  mockFunctions.cc  mock_functions.h  validate_app_main.cc
embedded/embedded-firmware/validate/src/: app_main.test.cc  embedded_firmware.test.cc  firmware_sensors.test.cc  mock_functions.cc  mock_functions.h  stub_firmware_sensors.h  timer.test.cc  validate_app_main.cc  validate_timer.cc
embedded/nvidia-docker/: docker-compose.yml
embedded/shared-firmware/: .gitignore  CMakeLists.txt  commands_handler.cc  communication_manager.cc  drone.cc  navigation_system.cc  vector3d.cc
embedded/shared-firmware/include/components/: ccommunication_manager.h  commands_handler.h  communication_manager.h  crazyflie_task.h  drone.h  navigation_system.h  sensor_manager.h
embedded/shared-firmware/include/controllers/: abstract_controller.h  controller_data.h  firmware_controller.h  simulation_controller.h
embedded/shared-firmware/include/sensors/: abstract_sensor.h  abstract_sensors.h  firmware_sensor.h  firmware_sensors.h  simulation_sensor.h  simulation_sensors.h
embedded/shared-firmware/include/utils/: commands.h  delay.h  directions.h  droneData.h  drone_data.h  led.h  math.h  potential_shortcut.h  segment.h  semaphore.h  shortcut_verifier.h  state.h  time.h  timer.h  vector3d.h
embedded/shared-firmware/src/: abstract_controller.cc  commands_handler.cc  communication_manager.cc  math.cc  navigation_system.cc  potential_shortcut.cc  segment.cc  semaphore.cc  sensor_data_updater.cc  sensors_data_updater.cc  vector3d.cc
embedded/shared-firmware/validate/: CMakeLists.txt
embedded/shared-firmware/validate/src/: commands_handler.test.cc  communication_manager.test.cc  drone.test.cc  navigation_system.test.cc  semaphore.test.cc  sensors_data_updater.test.cc  validate_communication_manager.cc  validate_vector3D.cc  validation_navigation_system.cc  vector3D.test.cc
embedded/shared-firmware/validate/src/stubs/: stub_firmware_controller.h  stub_methods.cc
embedded/simulation/: CMakeLists.txt
embedded/simulation/crazyflie/: CMakeLists.txt  crazyflie_sensing.cpp  crazyflie_sensing.h
embedded/simulation/experiments/: crazyflie_sensing.argos
embedded/simulation/src/: CMakeLists.txt  simulation_controller.cc  simulation_sensor.cc  simulation_sensors.cc  time.cc  timer.cc  utils.cc
embedded/simulation/validate/: CMakeLists.txt
embedded/simulation/validate/src/: simulation_controller.test.cc  validate_simulation_controller.cc
embedded/simulation/validate/stubs/: cci_positioning_sensor.cc  socket.h  stubSocket.h  stub_argos.cc  stub_cci_positioning_sensor.h  stub_cci_quadrotor_position_actuator.h  stub_cci_quadrotor_speed_actuator.h  stub_crazyflie_sensing.h  stub_drone.h  stub_simulation_sensors.h
embedded/software-bridge/: Vector3d.cc  vector3d.cc
embedded/software-bridge/include/: abstractController.h  abstract_controller.h  directions.h  firmwareController.h  firmware_controller.h  simulation_controller.h
frontend/: .eslintrc.js  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
frontend/.devcontainer/: Dockerfile.devcontainer  devcontainer.json
frontend/public/: index.html  style.css
frontend/src/: App.vue  app.vue  main.ts
frontend/src/communication/: access_status.ts  drone.ts  mission_status.ts  server_communication.ts  server_constants.ts
frontend/src/components/: HelloWorld.vue  drone_commands.vue  drone_data_card.vue  drone_menu.vue  editor.vue  file_editor.vue  logs_interface.vue  map.js  map.vue  map_constants.ts  map_test.js  map_test.vue  mission_commands.vue  (+2 more)
inf3995/: README.md
nvidia-docker-compose/: docker-compose.yml
simulation/.devcontainer/: devcontainer.json
(+39 files in other folders)
